# nfstream

./: .appveyor.yml  .coveragerc  .drone.yml  .git-blame-ignore-revs  .gitignore  .gitmodules  .travis.yml  CITATION.cff  CITATION.cff.txt  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  SECURITY.md  appveyor.yml  apt.txt  ci_requirements.txt  codecov.yml  dev_requirements.txt  generate_results.py  lgtm.yml  prepare.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tests.py  travis.yml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  build_and_publish.yml  build_publish_manylinux.yml  build_publish_manylinux_aarch64.yml  build_publish_manylinux_x86_64.yml  build_test_aarch64.yml  build_test_armhf.yml  build_test_linux.yml  build_test_macos.yml  build_test_publish_aarch64.yml  build_test_publish_arm64.yml  build_test_publish_armhf.yml  build_test_publish_linux.yml  build_test_publish_macos.yml  build_test_publish_windows.yml  build_test_windows.yml  build_wheel_publish.yml  cifuzz.yml  codeql-analysis.yml  debug.yml  dependabot.yml  pythonpackage.yml  test.yml  test_macos.yml  test_posix.yml  test_ubuntu.yml  windows_build_and_publish.yml
appveyor/: install.ps1  run_with_env.cmd
assets/: NOTE.md  PERFORMANCE_REPORT.md
browser/: README.md  extension_server.py
browser-extensions/: README.md
browser-extensions/chrome/: background.js
browser-extensions/firefox/: options.html  options.js
browser/chrome/: background.js  manifest.json  nfstream.js  options.js  style.css
browser/firefox/: background.js  manifest.json  nfstream.js  options.html  options.js
docs/source/: architecture.rst  changelog.rst  conf.py  contributing.rst  get_started.rst  index.rst  installation.rst  introduction.rst  nfstream.rst  plugins.rst  (+3 more)
examples/: README.md  csv_generator.py  flow_printer.py  ignored_packets_printer.py  multiple_file_sources.py  wfeatures_pandas.py
nfstream/: Makefile  __init__.py  anonymizer.py  browser.py  cache.py  classifier.py  context.py  context_cc.c  dpi.py  entry.py  flow.py  libndpi_cc.py  libpcap_cc.py  meter.py  ndpi.py  ndpi_bindings.py  observer.c  observer.py  observer_cc.c  observer_cc.py  pcap.c  pcap.pyx  pcap_ex.c  pcap_ex.h  plugin.py  streamer.py  system.py  utils.py
tests/: README.rst  build_results.sh
(+322 files in other folders)
